0.13.8 August ?, 2025
- to address kobo reader crash when a span containing multiple spaces has padded, moved txt padding spaces out of the span with padding

0.13.7 May 21, 2025
- fixed typo in add_local_options, added a log message to report outputfile location (thanks @cpeel)
- removed the online ebookmaker script, now at https://github.com/gutenbergtools/ebookmaker-web/ from (@Rossolson)
- added 2-EM DASH to EPUB2 deprecation table. fixes #271
- removed ol@start from the html5 deprecation list
- added ol@start and li@value to the EPUB2 deprecation list #264 and #265

0.13.6 March 6, 2025
- completely ignored `input_mediatype`; and added deprecation notice. will remove --input-mediatype in the future. Because we started using cchardet, ebookmaker is much better at determining document encoding than are humans, so we started mostly ignoring declared encodings. But Online Ebookmaker has asked users to declare encoding, which confused v0.13.
- the error log messages for txt files missing header or footer markers now issue from the parser. 
- fixed a bug triggered by urlencoded spaces in an id fragment - seen in #48368
- when audio file links are replaced with audio elements, the link contents is now kept in a span tag containing the audio element. Fixes #260
- when there is no release date, we no longer report "January 01, 0001". Fixes #261.
- `ebook` is now an instance attribute of the `job` object. It was persisting across instantiations, which is not desired.
- Logger.ebook is now set before the first parse, so that we can better trace encoding problems.
- The file url is now reported when logging encoding errors.


0.13.4 January 22, 2025
- fix failed parsing when an `a` element has no tail

0.13.3 January 21, 2025
- fix failures with unknown mediatypes.
- fix validation errors with linked image


0.13.2 January 20, 2025